Added a has_audio to the people_groups endpoint.
