# Public/api-docs.json
@@ -823,6 +823,15 @@
                         }
                     },
                     {
+                        "name": "has_audio",
+                        "in": "query",
+                        "description": "A boolean (represented as a string Y or N) that states whether you want people groups that have access to an audio recorded Bible.",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
                         "name": "has_jesus_film",
                         "in": "query",
                         "description": "A boolean (represented as a string Y or N) that states whether you want people groups that have access to the Jesus Film.",
